// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalkThrough: index changing steps step 1: renders createUser 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WalkThrough
    currentUser={
      Object {
        "accountAddress": "123456789012345678901234567890123",
      }
    }
    faucetRequest={[Function]}
    firstTimeUser={false}
    isWalkThroughOpen={true}
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <form>
        <Blueprint.Dialog
          canEscapeKeyClose={true}
          canOutsideClickClose={false}
          className="pt-dark dialog walk-through"
          isCloseButtonShown={true}
          isOpen={true}
          onClose={[Function]}
          title="Link Account to STRATO Testnet"
        >
          <Stepper
            step={0}
          />
          <withRouter(Connect(ReduxForm)) />
        </Blueprint.Dialog>
      </form>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Blueprint.Dialog
          canEscapeKeyClose={true}
          canOutsideClickClose={false}
          className="pt-dark dialog walk-through"
          isCloseButtonShown={true}
          isOpen={true}
          onClose={[Function]}
          title="Link Account to STRATO Testnet"
        >
          <Stepper
            step={0}
          />
          <withRouter(Connect(ReduxForm)) />
        </Blueprint.Dialog>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "canEscapeKeyClose": true,
          "canOutsideClickClose": false,
          "children": Array [
            <Stepper
              step={0}
            />,
            <withRouter(Connect(ReduxForm)) />,
          ],
          "className": "pt-dark dialog walk-through",
          "isCloseButtonShown": true,
          "isOpen": true,
          "onClose": [Function],
          "title": "Link Account to STRATO Testnet",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "step": 0,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": "form",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <form>
          <Blueprint.Dialog
            canEscapeKeyClose={true}
            canOutsideClickClose={false}
            className="pt-dark dialog walk-through"
            isCloseButtonShown={true}
            isOpen={true}
            onClose={[Function]}
            title="Link Account to STRATO Testnet"
          >
            <Stepper
              step={0}
            />
            <withRouter(Connect(ReduxForm)) />
          </Blueprint.Dialog>
        </form>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Blueprint.Dialog
            canEscapeKeyClose={true}
            canOutsideClickClose={false}
            className="pt-dark dialog walk-through"
            isCloseButtonShown={true}
            isOpen={true}
            onClose={[Function]}
            title="Link Account to STRATO Testnet"
          >
            <Stepper
              step={0}
            />
            <withRouter(Connect(ReduxForm)) />
          </Blueprint.Dialog>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "canEscapeKeyClose": true,
            "canOutsideClickClose": false,
            "children": Array [
              <Stepper
                step={0}
              />,
              <withRouter(Connect(ReduxForm)) />,
            ],
            "className": "pt-dark dialog walk-through",
            "isCloseButtonShown": true,
            "isOpen": true,
            "onClose": [Function],
            "title": "Link Account to STRATO Testnet",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "step": 0,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": "form",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "prevContext": true,
          },
          "getChildContext": Object {
            "calledByRenderer": true,
          },
        },
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`WalkThrough: index changing steps step 2: renders verifyAccount 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WalkThrough
    currentUser={
      Object {
        "accountAddress": "123456789012345678901234567890123",
      }
    }
    faucetRequest={[Function]}
    firstTimeUser={true}
    isWalkThroughOpen={true}
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <form>
        <Blueprint.Dialog
          canEscapeKeyClose={false}
          canOutsideClickClose={false}
          className="pt-dark dialog walk-through"
          isCloseButtonShown={false}
          isOpen={true}
          onClose={[Function]}
          title="Password Verification"
        >
          <Stepper
            step={1}
          />
          <withRouter(Connect(ReduxForm)) />
        </Blueprint.Dialog>
      </form>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Blueprint.Dialog
          canEscapeKeyClose={false}
          canOutsideClickClose={false}
          className="pt-dark dialog walk-through"
          isCloseButtonShown={false}
          isOpen={true}
          onClose={[Function]}
          title="Password Verification"
        >
          <Stepper
            step={1}
          />
          <withRouter(Connect(ReduxForm)) />
        </Blueprint.Dialog>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "canEscapeKeyClose": false,
          "canOutsideClickClose": false,
          "children": Array [
            <Stepper
              step={1}
            />,
            <withRouter(Connect(ReduxForm)) />,
          ],
          "className": "pt-dark dialog walk-through",
          "isCloseButtonShown": false,
          "isOpen": true,
          "onClose": [Function],
          "title": "Password Verification",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "step": 1,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": "form",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <form>
          <Blueprint.Dialog
            canEscapeKeyClose={false}
            canOutsideClickClose={false}
            className="pt-dark dialog walk-through"
            isCloseButtonShown={false}
            isOpen={true}
            onClose={[Function]}
            title="Password Verification"
          >
            <Stepper
              step={1}
            />
            <withRouter(Connect(ReduxForm)) />
          </Blueprint.Dialog>
        </form>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Blueprint.Dialog
            canEscapeKeyClose={false}
            canOutsideClickClose={false}
            className="pt-dark dialog walk-through"
            isCloseButtonShown={false}
            isOpen={true}
            onClose={[Function]}
            title="Password Verification"
          >
            <Stepper
              step={1}
            />
            <withRouter(Connect(ReduxForm)) />
          </Blueprint.Dialog>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "canEscapeKeyClose": false,
            "canOutsideClickClose": false,
            "children": Array [
              <Stepper
                step={1}
              />,
              <withRouter(Connect(ReduxForm)) />,
            ],
            "className": "pt-dark dialog walk-through",
            "isCloseButtonShown": false,
            "isOpen": true,
            "onClose": [Function],
            "title": "Password Verification",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "step": 1,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": "form",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "prevContext": true,
          },
          "getChildContext": Object {
            "calledByRenderer": true,
          },
        },
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`WalkThrough: index changing steps step 3: renders create password 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WalkThrough
    currentUser={
      Object {
        "accountAddress": "123456789012345678901234567890123",
      }
    }
    faucetRequest={[Function]}
    firstTimeUser={true}
    isTempPasswordVerified={true}
    isWalkThroughOpen={true}
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <form>
        <Blueprint.Dialog
          canEscapeKeyClose={false}
          canOutsideClickClose={false}
          className="pt-dark dialog walk-through"
          isCloseButtonShown={false}
          isOpen={true}
          onClose={[Function]}
          title="Set Permanent Password"
        >
          <Stepper
            step={2}
          />
          <withRouter(Connect(ReduxForm)) />
        </Blueprint.Dialog>
      </form>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Blueprint.Dialog
          canEscapeKeyClose={false}
          canOutsideClickClose={false}
          className="pt-dark dialog walk-through"
          isCloseButtonShown={false}
          isOpen={true}
          onClose={[Function]}
          title="Set Permanent Password"
        >
          <Stepper
            step={2}
          />
          <withRouter(Connect(ReduxForm)) />
        </Blueprint.Dialog>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "canEscapeKeyClose": false,
          "canOutsideClickClose": false,
          "children": Array [
            <Stepper
              step={2}
            />,
            <withRouter(Connect(ReduxForm)) />,
          ],
          "className": "pt-dark dialog walk-through",
          "isCloseButtonShown": false,
          "isOpen": true,
          "onClose": [Function],
          "title": "Set Permanent Password",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "step": 2,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": "form",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <form>
          <Blueprint.Dialog
            canEscapeKeyClose={false}
            canOutsideClickClose={false}
            className="pt-dark dialog walk-through"
            isCloseButtonShown={false}
            isOpen={true}
            onClose={[Function]}
            title="Set Permanent Password"
          >
            <Stepper
              step={2}
            />
            <withRouter(Connect(ReduxForm)) />
          </Blueprint.Dialog>
        </form>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Blueprint.Dialog
            canEscapeKeyClose={false}
            canOutsideClickClose={false}
            className="pt-dark dialog walk-through"
            isCloseButtonShown={false}
            isOpen={true}
            onClose={[Function]}
            title="Set Permanent Password"
          >
            <Stepper
              step={2}
            />
            <withRouter(Connect(ReduxForm)) />
          </Blueprint.Dialog>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "canEscapeKeyClose": false,
            "canOutsideClickClose": false,
            "children": Array [
              <Stepper
                step={2}
              />,
              <withRouter(Connect(ReduxForm)) />,
            ],
            "className": "pt-dark dialog walk-through",
            "isCloseButtonShown": false,
            "isOpen": true,
            "onClose": [Function],
            "title": "Set Permanent Password",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "step": 2,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": "form",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "prevContext": true,
          },
          "getChildContext": Object {
            "calledByRenderer": true,
          },
        },
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`WalkThrough: index changing steps step 3: renders password creation successful 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WalkThrough
    currentUser={
      Object {
        "accountAddress": "123456789012345678901234567890123",
      }
    }
    faucetRequest={[Function]}
    firstTimeUser={true}
    isLoggedIn={true}
    isTempPasswordVerified={true}
    isWalkThroughOpen={true}
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <form>
        <Blueprint.Dialog
          canEscapeKeyClose={false}
          canOutsideClickClose={false}
          className="pt-dark dialog walk-through"
          isCloseButtonShown={false}
          isOpen={true}
          onClose={[Function]}
          title="Congratulations!"
        >
          <Stepper
            step={3}
          />
          <Congrats
            handleContinue={[Function]}
          />
        </Blueprint.Dialog>
      </form>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Blueprint.Dialog
          canEscapeKeyClose={false}
          canOutsideClickClose={false}
          className="pt-dark dialog walk-through"
          isCloseButtonShown={false}
          isOpen={true}
          onClose={[Function]}
          title="Congratulations!"
        >
          <Stepper
            step={3}
          />
          <Congrats
            handleContinue={[Function]}
          />
        </Blueprint.Dialog>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "canEscapeKeyClose": false,
          "canOutsideClickClose": false,
          "children": Array [
            <Stepper
              step={3}
            />,
            <Congrats
              handleContinue={[Function]}
            />,
          ],
          "className": "pt-dark dialog walk-through",
          "isCloseButtonShown": false,
          "isOpen": true,
          "onClose": [Function],
          "title": "Congratulations!",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "step": 3,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "handleContinue": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": "form",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <form>
          <Blueprint.Dialog
            canEscapeKeyClose={false}
            canOutsideClickClose={false}
            className="pt-dark dialog walk-through"
            isCloseButtonShown={false}
            isOpen={true}
            onClose={[Function]}
            title="Congratulations!"
          >
            <Stepper
              step={3}
            />
            <Congrats
              handleContinue={[Function]}
            />
          </Blueprint.Dialog>
        </form>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Blueprint.Dialog
            canEscapeKeyClose={false}
            canOutsideClickClose={false}
            className="pt-dark dialog walk-through"
            isCloseButtonShown={false}
            isOpen={true}
            onClose={[Function]}
            title="Congratulations!"
          >
            <Stepper
              step={3}
            />
            <Congrats
              handleContinue={[Function]}
            />
          </Blueprint.Dialog>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "canEscapeKeyClose": false,
            "canOutsideClickClose": false,
            "children": Array [
              <Stepper
                step={3}
              />,
              <Congrats
                handleContinue={[Function]}
              />,
            ],
            "className": "pt-dark dialog walk-through",
            "isCloseButtonShown": false,
            "isOpen": true,
            "onClose": [Function],
            "title": "Congratulations!",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "step": 3,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "handleContinue": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": "form",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "prevContext": true,
          },
          "getChildContext": Object {
            "calledByRenderer": true,
          },
        },
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`WalkThrough: index changing steps step 4: renders CLI 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WalkThrough
    currentUser={
      Object {
        "accountAddress": "123456789012345678901234567890123",
      }
    }
    faucetRequest={[Function]}
    firstTimeUser={true}
    isLoggedIn={true}
    isTempPasswordVerified={true}
    isWalkThroughOpen={true}
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <form>
        <Blueprint.Dialog
          canEscapeKeyClose={true}
          canOutsideClickClose={false}
          className="pt-dark dialog walk-through"
          isCloseButtonShown={true}
          isOpen={true}
          onClose={[Function]}
          title="Download CLI Tool"
        >
          <Stepper
            step={4}
          />
          <withRouter(Connect(CLI))
            closeWalkThroughOverlay={undefined}
          />
        </Blueprint.Dialog>
      </form>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Blueprint.Dialog
          canEscapeKeyClose={true}
          canOutsideClickClose={false}
          className="pt-dark dialog walk-through"
          isCloseButtonShown={true}
          isOpen={true}
          onClose={[Function]}
          title="Download CLI Tool"
        >
          <Stepper
            step={4}
          />
          <withRouter(Connect(CLI))
            closeWalkThroughOverlay={undefined}
          />
        </Blueprint.Dialog>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "canEscapeKeyClose": true,
          "canOutsideClickClose": false,
          "children": Array [
            <Stepper
              step={4}
            />,
            <withRouter(Connect(CLI))
              closeWalkThroughOverlay={undefined}
            />,
          ],
          "className": "pt-dark dialog walk-through",
          "isCloseButtonShown": true,
          "isOpen": true,
          "onClose": [Function],
          "title": "Download CLI Tool",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "step": 4,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "closeWalkThroughOverlay": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": "form",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <form>
          <Blueprint.Dialog
            canEscapeKeyClose={true}
            canOutsideClickClose={false}
            className="pt-dark dialog walk-through"
            isCloseButtonShown={true}
            isOpen={true}
            onClose={[Function]}
            title="Download CLI Tool"
          >
            <Stepper
              step={4}
            />
            <withRouter(Connect(CLI))
              closeWalkThroughOverlay={undefined}
            />
          </Blueprint.Dialog>
        </form>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Blueprint.Dialog
            canEscapeKeyClose={true}
            canOutsideClickClose={false}
            className="pt-dark dialog walk-through"
            isCloseButtonShown={true}
            isOpen={true}
            onClose={[Function]}
            title="Download CLI Tool"
          >
            <Stepper
              step={4}
            />
            <withRouter(Connect(CLI))
              closeWalkThroughOverlay={undefined}
            />
          </Blueprint.Dialog>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "canEscapeKeyClose": true,
            "canOutsideClickClose": false,
            "children": Array [
              <Stepper
                step={4}
              />,
              <withRouter(Connect(CLI))
                closeWalkThroughOverlay={undefined}
              />,
            ],
            "className": "pt-dark dialog walk-through",
            "isCloseButtonShown": true,
            "isOpen": true,
            "onClose": [Function],
            "title": "Download CLI Tool",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "step": 4,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "closeWalkThroughOverlay": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": "form",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "prevContext": true,
          },
          "getChildContext": Object {
            "calledByRenderer": true,
          },
        },
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`WalkThrough: index mapStateToProps with default state 1`] = `
Object {
  "currentUser": Object {
    "accountAddress": "123456789012345678901234567890123",
  },
  "firstTimeUser": true,
  "isLoggedIn": false,
  "isTempPasswordVerified": false,
  "isWalkThroughOpen": true,
}
`;

exports[`WalkThrough: index render component when modal is closed 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WalkThrough
    isWalkThroughOpen={false}
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <form>
        <Blueprint.Dialog
          canEscapeKeyClose={true}
          canOutsideClickClose={false}
          className="pt-dark dialog walk-through"
          isCloseButtonShown={true}
          isOpen={false}
          onClose={[Function]}
          title="Link Account to STRATO Testnet"
        >
          <Stepper
            step={0}
          />
          <withRouter(Connect(ReduxForm)) />
        </Blueprint.Dialog>
      </form>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Blueprint.Dialog
          canEscapeKeyClose={true}
          canOutsideClickClose={false}
          className="pt-dark dialog walk-through"
          isCloseButtonShown={true}
          isOpen={false}
          onClose={[Function]}
          title="Link Account to STRATO Testnet"
        >
          <Stepper
            step={0}
          />
          <withRouter(Connect(ReduxForm)) />
        </Blueprint.Dialog>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "canEscapeKeyClose": true,
          "canOutsideClickClose": false,
          "children": Array [
            <Stepper
              step={0}
            />,
            <withRouter(Connect(ReduxForm)) />,
          ],
          "className": "pt-dark dialog walk-through",
          "isCloseButtonShown": true,
          "isOpen": false,
          "onClose": [Function],
          "title": "Link Account to STRATO Testnet",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "step": 0,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": "form",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <form>
          <Blueprint.Dialog
            canEscapeKeyClose={true}
            canOutsideClickClose={false}
            className="pt-dark dialog walk-through"
            isCloseButtonShown={true}
            isOpen={false}
            onClose={[Function]}
            title="Link Account to STRATO Testnet"
          >
            <Stepper
              step={0}
            />
            <withRouter(Connect(ReduxForm)) />
          </Blueprint.Dialog>
        </form>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Blueprint.Dialog
            canEscapeKeyClose={true}
            canOutsideClickClose={false}
            className="pt-dark dialog walk-through"
            isCloseButtonShown={true}
            isOpen={false}
            onClose={[Function]}
            title="Link Account to STRATO Testnet"
          >
            <Stepper
              step={0}
            />
            <withRouter(Connect(ReduxForm)) />
          </Blueprint.Dialog>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "canEscapeKeyClose": true,
            "canOutsideClickClose": false,
            "children": Array [
              <Stepper
                step={0}
              />,
              <withRouter(Connect(ReduxForm)) />,
            ],
            "className": "pt-dark dialog walk-through",
            "isCloseButtonShown": true,
            "isOpen": false,
            "onClose": [Function],
            "title": "Link Account to STRATO Testnet",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "step": 0,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": "form",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "prevContext": true,
          },
          "getChildContext": Object {
            "calledByRenderer": true,
          },
        },
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`WalkThrough: index render component when modal is open 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WalkThrough
    isWalkThroughOpen={true}
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <form>
        <Blueprint.Dialog
          canEscapeKeyClose={true}
          canOutsideClickClose={false}
          className="pt-dark dialog walk-through"
          isCloseButtonShown={true}
          isOpen={true}
          onClose={[Function]}
          title="Link Account to STRATO Testnet"
        >
          <Stepper
            step={0}
          />
          <withRouter(Connect(ReduxForm)) />
        </Blueprint.Dialog>
      </form>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Blueprint.Dialog
          canEscapeKeyClose={true}
          canOutsideClickClose={false}
          className="pt-dark dialog walk-through"
          isCloseButtonShown={true}
          isOpen={true}
          onClose={[Function]}
          title="Link Account to STRATO Testnet"
        >
          <Stepper
            step={0}
          />
          <withRouter(Connect(ReduxForm)) />
        </Blueprint.Dialog>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "canEscapeKeyClose": true,
          "canOutsideClickClose": false,
          "children": Array [
            <Stepper
              step={0}
            />,
            <withRouter(Connect(ReduxForm)) />,
          ],
          "className": "pt-dark dialog walk-through",
          "isCloseButtonShown": true,
          "isOpen": true,
          "onClose": [Function],
          "title": "Link Account to STRATO Testnet",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "step": 0,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": "form",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <form>
          <Blueprint.Dialog
            canEscapeKeyClose={true}
            canOutsideClickClose={false}
            className="pt-dark dialog walk-through"
            isCloseButtonShown={true}
            isOpen={true}
            onClose={[Function]}
            title="Link Account to STRATO Testnet"
          >
            <Stepper
              step={0}
            />
            <withRouter(Connect(ReduxForm)) />
          </Blueprint.Dialog>
        </form>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Blueprint.Dialog
            canEscapeKeyClose={true}
            canOutsideClickClose={false}
            className="pt-dark dialog walk-through"
            isCloseButtonShown={true}
            isOpen={true}
            onClose={[Function]}
            title="Link Account to STRATO Testnet"
          >
            <Stepper
              step={0}
            />
            <withRouter(Connect(ReduxForm)) />
          </Blueprint.Dialog>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "canEscapeKeyClose": true,
            "canOutsideClickClose": false,
            "children": Array [
              <Stepper
                step={0}
              />,
              <withRouter(Connect(ReduxForm)) />,
            ],
            "className": "pt-dark dialog walk-through",
            "isCloseButtonShown": true,
            "isOpen": true,
            "onClose": [Function],
            "title": "Link Account to STRATO Testnet",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "step": 0,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": "form",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "prevContext": true,
          },
          "getChildContext": Object {
            "calledByRenderer": true,
          },
        },
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;
